tests/compile-fail/integration__integration__mapfiles__intrinsic_has_extra_arg.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic AssignOp(=,int): unexpected dword integer arg at index 3
  ┌─ <mapfile-1>:5:4
  │
5 │ 99 SSS
  │    ^^^ unexpected dword integer arg at index 3


